welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: not found: value navance
	else {navance()
              ^Program:37: error: type mismatch;
 found   : Unit
 required: Boolean
	                                  } else   {recule(); recule(); recule(); recule(); recule(); recule();
                                                                                                            ^