welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit = false;

	if (estSurBiscuit()==true){
	return true
	}
	else {navance()
	     if (estSurBiscuit()==true){
	      return true
	      
            }
            else {avance();
                  if (estSurBiscuit()==true){
	                 return true
	                 
                  }
                  else {avance();
                       if (estSurBiscuit()==true){
	                  return true
	                  
                       } 
                       else {avance();
                            if (estSurBiscuit()==true){
	                        return true
	                        
                            }
                            else {avance();
                                 if (estSurBiscuit()==true){
	                             return true
	                             
                                 } 
	                             else {avance();
	                                  if (estSurBiscuit()==true){
	                                  return true
	                                  
	                                  } else   {recule(); recule(); recule(); recule(); recule(); recule();
}}
                            }}}}}}
	                             
                                 